_dev/src/sass/partials/_mobile.scss
body {
  padding-top: 43px;
}

.navbar-brand {
  padding-top: 0;
  padding-bottom: 0;
  margin-right: 0;
}

.navbar-toggler {
  padding: .25rem .15rem;
}

#header-logo {
  height: 30px;
}

#left-menu-overlay {
  display: block;
  visibility: hidden;
  background-color: #0a2153;
  position: fixed;
  z-index: 90;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
}

#left-menu {
  left: -350px;
  z-index: 100;
  overflow-y: auto;
  transition: left 0.5s ease-in-out;
  padding-bottom: 50px;
  &.open {
    left: 0;
    & + #left-menu-overlay {
      opacity: 0.5;
      visibility: visible;
    }
  }
}

.article-nav {
  height: auto;
  min-height: calc(100vh - 140px);
}

.site-wrapper {
  padding-left: 0;
}

